<resources>
    <string name="app_name">EVS</string>
    <string name="title_activity_csub">EVS Inscription</string>
    <string name="title_activity_chub">EVS Accueil</string>
    <string name="title_activity_ckyvote">Vote KemenyYoung</string>
    <string name="title_activity_stvvote">Vote STV</string>
    <string name="title_activity_majority_vote">Vote Majoritaire</string>
    <string name="title_activity_gg">gg</string>
    <string name="title_activity_cvote_uninominal_one_turn">Vote Uninominal 1 tour</string>
    <string name="title_activity_cvote_conf_stv">Vote STV</string>
    <string name="title_activity_cvote_conf_kemeny_young">Vote Kemeny-Young</string>
    <string name="title_activity_cvote_conf_majority_jugement">Vote Jugement Majoritaire</string>
    <string name="title_activity_uninominal_vote">Vote Uninominal 1 tour</string>
    <string name="title_activity_cvote_conf_uninominal_two_turn">Vote Uninomial 2 tours</string>
    <string name="title_activity_cvote_conf_borda">Vote Borda</string>
    <string name="title_activity_ctest">CTestActivity</string>
    <string name="title_activity_cvote_conf_condorcet">Vote Condorcet</string>
    <string name="title_activity_cparticipant">Choix des participants</string>
    <string name="title_activity_crecap_vote">Récapitulatif du vote</string>
    <string name="title_activity_cranking_vote">Vote par classement</string>
    <string name="title_activity_cresult_ranking">Resultat vote par classement</string>
    <string name="title_activity_cresult_uninominal">Resultat vote uninominal</string>
    <string name="title_activity_cresult_JM">Resultat vote jugement majoritaire</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="mailHint">Mail</string>
    <string name="passHint">Mot de Passe</string>
    <string name="bLogText">Se connecter</string>
    <string name="bSubText">S\'inscrire</string>
    <string name="bSubValidationText">Valider</string>

    <!--nom des tab de la barre de tab -->
    <string name="title_section1">Mes Votes</string>
    <string name="title_section2">Creer Vote</string>
    <string name="title_section3">Contacts</string>
    <string name="hubText">Bienvenue</string>
    <string name="hubText2">Mes Votes</string>
    <string name="hubText3">Contacts</string>
    <string name="hubText4">Create VOTES</string>

    <string name="voteNameHint">Nom du vote</string>
    <string name="voteDateBegin">Date de début</string>
    <string name="voteDateEnd">Date de fin</string>

    <string name="validationText">Valider</string>

    <string name="subValidateErrorMessage">Tous les champs ne sont pas remplis</string>
    <!-- description des votes -->
    <string name="stvDescription">Système de classement par préférence</string>
    <string name="kemenyYoungDescription">le vote KY sert à choisir un ordre gagnant parmi les candidats. Il est très couteux, donc il est impossible de le réaliser pour plus de 9 candidats.
        L\'électeur doit ordonner les candidats par ordre de préférence </string>
    <string name="jugementMajorityDescription">Le vote JM sert à évaluer chaque candidat par une mention :\n
        &#8226; Excellent\n
        &#8226; Très bien\n
        &#8226; Bien\n
        &#8226; Assez bien\n
        &#8226; Insuffisant\n
        &#8226; À rejeter\n</string>
    <string name="uninomialOneTurnVoteDescription">Dans ce vote l\'électeur doit choisir un candidat
        parmi plusieurs. Celui qui recueille le plus de voix (majorité relative) remporte les élections.</string>
    <string name="uninominalTwoTurnVoteDescription">Au premier tour, l\'électeur doit choisir un
        candidat parmi plusieurs. Si un candidat recueille la majorité absolue (plus de 50 %),
        il est élu. Sinon, on organise un second tour dans lequel le candidat qui recueille le plus
        de voix est élu.</string>



    <string name="calculationMethod">Mode de calcul</string>
    <string name="CondorcetDescription">le vote de Condorcet sert à blablabla</string>
    <string name="BordaDescription">le vote Borda sert à blablabla</string>
    <string name="userFirstNameInputHint">Prénom</string>
    <string name="userLastNameInputHint">Nom de famille</string>
    <string name="lTVvoteNameLabel">Nom du vote :</string>
    <string name="lTVHelpMessageLog">Si vous avez déjà un compte, veuillez renseigner votre mail et
        votre mot de passe et appuyer sur le bouton se connecter. Sinon veuillez appuyer sur le bouton
        s\'inscrire</string>
    <string name="lTVspinnerName">Type de Vote</string>

    <string name="lETChoiceHint">Choix</string>
    <string name="lETDescriptionHint">Description</string>

    <!-- messages d'erreur pour la création de vote-->
    <string name="validateVoteTypeETempty">Vous n\'avez pas rempli le nom du vote</string>
    <string name="dateBeginEmpty">Vous n\'avez pas choisi de date de début</string>
    <string name="dateEndEmpty">Vous n\'avez pas choisi de date de fin</string>
    <string name="dateBeginAfterDateEnd">La date de début est après la date de fin</string>

    <string name="cancelVote">Annuler tout</string>
    <string name="vote">Voter !</string>
    <string name="title_activity_ccontact_ajout">CContactAjout</string>
    <string name="nom_contact">Nom</string>
    <string name="prenom_contact">Prenom</string>
    <string name="mail_contact">Mail</string>
    <string name="title_activity_ctest_contact_ajout">CTestContactAjout</string>
    <string name="title_activity_csetting_account">CSettingAccount</string>


    <string name="text_bouton_modifier_compte">Modifier compte</string>
    <string name="text_bouton_deconnecter_compte">Deconnexion</string>
    <string name="text_bouton_supprimer_compte">Supprimer compte</string>
    <string name="title_activity_cmodif_compte">Modification du compte</string>
    <string name="title_activity_csuppression_compte">Suppression du compte</string>

    <string name="help_suppression_de_compte">entrez le mail et le mots de passe de votre compte pour le supprimer </string>
    <string name="supression_boutton">supprimer compte</string>
    <string name="title_activity_ccontact_supression">Suppression du contact</string>

    <string name="title_activity_cnote_vote">CNoteVote</string>

    <string-array name="notepossible">
        <item>Excellent</item>
        <item>Tres bien</item>
        <item>Bien</item>
        <item>Assez bien</item>
        <item>Insuffisant</item>
        <item>A rejeter</item>
    </string-array>
    <string name="title_activity_spinnertest">Spinnertest</string>
    <string name="lchoiceDate">Choix date</string>
    <string name="help_title">Aide</string>
    <string name="rankvote_help_message">Pour voter vous devez classer les candidats selon votre ordre de préférence par un appuy long sur le candidat puis en le faisant glisser a la position souhaité.</string>
    <string name="menu_refresh_title">Actualiser</string>
    <string name="notevote_help_message">Pour voter vous devez attribuer une note a chaque candidat a l\'aide des menu déroulants.</string>
    <string name="uninominalvote_help_message">Pour voter vous devez selectionner un candidat en appuyant sur la petite case a coté de son nom et valider.</string>


</resources>
