<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univtln.m1dapm.g3.g3vote.Interface.CSubActivity">

    <EditText
        android:id="@+id/userFirstNameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:singleLine="true"
        android:hint="@string/userFirstNameInputHint" />

    <EditText
        android:id="@+id/userLastNameInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        android:hint="@string/userLastNameInputHint"
        android:singleLine="true"
        android:layout_below="@id/userFirstNameInput"/>
    <EditText
        android:id="@+id/userMailInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/mailHint"
        android:layout_below="@id/userLastNameInput"/>

    <EditText
        android:id="@+id/userPasswordInput"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:singleLine="true"
        android:hint="@string/passHint"
        android:layout_below="@+id/userMailInput"/>

    <Button
        android:id="@+id/BSubValidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bSubValidationText"
        android:onClick="validateSub"
        android:layout_below="@+id/userPasswordInput"
        android:layout_alignRight="@+id/userPasswordInput"
        android:layout_alignEnd="@+id/userPasswordInput" />
</RelativeLayout>
