<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univtln.m1dapm.g3.g3vote.Interface.CContactAjout">



    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editNomContact"
        android:ems="10"
        android:hint="@string/userLastNameInputHint"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"

        />

    <EditText

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editPrenomContact"
        android:ems="10"
        android:hint="@string/userFirstNameInputHint"
        android:layout_below="@+id/editNomContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
         />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editMailContact"
        android:hint="@string/mailHint"
        android:ems="10"
        android:layout_below="@+id/editPrenomContact"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
         />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validationText"
        android:id="@+id/boutonvaliderajoutcontact"
        android:layout_below="@+id/editMailContact"
        android:layout_centerHorizontal="true"
        android:onClick="ValidationAjoutContact"/>
</RelativeLayout>
