<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="fr.univtln.m1dapm.g3.g3vote.Interface.CSuppressionCompte">

    <EditText
        android:id="@+id/mailInputsupression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/mailHint"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/passInputsupression"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:hint="@string/passHint"
        android:layout_below="@+id/mailInputsupression"
        android:layout_alignRight="@+id/mailInput"
        android:layout_alignEnd="@+id/mailInput"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:singleLine="true"/>

    <Button
        android:id="@+id/Supvalidation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/supression_boutton"
        android:onClick="suprimer"
        android:layout_below="@+id/passInputsupression"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/help_supression_de_compte"
        android:id="@+id/lHelpMessageLog"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>
